--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
           "libraryName": "mint-ui",
           "style": true
         }
-      ]]],
+      ]],
+      "transform-remove-strict-mode"],
     "presets": ["env","stage-0"]
 }
