--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "url-loader": "^1.1.2",
     "vue": "^2.6.10",
     "vue-loader": "^14.2.2",
+    "vue-preview": "^1.1.3",
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.31.0",
