--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --open --port 520 --hot --contentBase src --host 192.168.43.200"
+    "start": "webpack-dev-server --mode development --open --port 520 --hot --contentBase src "
   },
   "keywords": [],
   "author": "",
