--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-preview": "^1.1.3",
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1"
